<resources>
    <string name="app_name">上海思稞</string>
    <string name="title_show">展示</string>
    <string name="title_receive">接收</string>
    <string name="title_dashboard">仪表</string>
    <string name="title_send">推送</string>
    <string name="title_video">视频</string>
    <string name="name_com">天禾农业科技集团智慧养护系统</string>
    <string name="name_h">土壤湿度：</string>
    <string name="name_a">空气参数：</string>
    <string name="name_o">操作记录：</string>
    <string name="name_wea">当地天气：</string>
    <string name="btn_clear">清除</string>
    <string name="tv_receive">上报数据</string>
    <string name="btn_random">随机测试</string>
    <string name="tv_cmd_input">输入指令：</string>
    <string name="btn_cmd_send">推送</string>
    <string name="btn_cmd_clear">清空</string>
    <string name="btn_cmd_videopen">视频启动</string>
    <string name="btn_cmd_videoclose">视频关闭</string>
    <string name="btn_cmd_dataclose">数据关闭</string>
    <string name="btn_cmd_dataopen">数据开启</string>
    <string name="btn_cmd_remotetest">远端测试</string>
    <string name="btn_cmd_maxhold">设置湿度上限</string>
    <string name="et_cmd_maxhold">湿度上限，如90</string>
    <string name="et_cmd_minhold">湿度下限，如10</string>
    <string name="btn_cmd_minhold">设置湿度下限</string>
    <string name="title_copyright">上海思稞信息科技有限公司</string>
    <string name="icon_humi">土壤湿度</string>
    <string name="title_machine">水肥一体N-P-K配方</string>
    <string name="tv_ratio">定植期至开花期18-12-20\n开花期至收获期20-5-25</string>
    <string name="title_kind">大棚品类信息</string>
    <string name="tv_kind">紫背天葵 紫芦笋 百香果 千禧果 辣椒树 柠檬树 观赏南瓜 大番茄 巨型南瓜 板栗南瓜 豆瓣绿 砰砰香 绿萝 养心菜 鸟巢蕨 金丝垂莲帘</string>
    <string name="mark_copyright">®\t\t</string>
</resources>
