<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_cmd_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:freezesText="true"
                android:hint="@string/tv_cmd_input"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_cmd_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_send"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_cmd_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_clear"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cmd_videopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_videopen"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_cmd_videoclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_videoclose"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_cmd_dataopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_dataopen"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_cmd_dataclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_dataclose"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_cmd_maxhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/et_cmd_maxhold"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_cmd_maxhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_maxhold"
                tools:ignore="ButtonStyle" />

            <EditText
                android:id="@+id/et_cmd_minhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/et_cmd_minhold"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_cmd_minhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_minhold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cmd_remotetest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_weight="1"
                android:text="@string/btn_cmd_remotetest"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
