<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal"
            android:text="@string/name_com"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/name_h"
                        android:maxHeight="30dp"
                        app:srcCompat="@drawable/ic_airhumi" />

                    <TextView
                        android:id="@+id/tv_h_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/name_h"
                        android:freezesText="true"
                        android:text="@string/name_h"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/name_h"
                        android:freezesText="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_humi"
                        android:maxHeight="30dp"
                        app:srcCompat="@drawable/ic_airtemp" />

                    <TextView
                        android:id="@+id/tv_a_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="@string/name_a"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/name_o"
                        android:maxHeight="30dp"
                        app:srcCompat="@drawable/ic_operate" />

                    <TextView
                        android:id="@+id/tv_o_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="@string/name_o"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_o"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/name_wea"
                        android:maxHeight="30dp"
                        app:srcCompat="@drawable/ic_weather" />

                    <TextView
                        android:id="@+id/tv_wea_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="@string/name_wea"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_wea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_border"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/title_machine"
                            app:srcCompat="@drawable/ic_water" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_machine"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/tv_ratio"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/layout_border"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/title_kind"
                            app:srcCompat="@drawable/ic_vegetable" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_kind"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="marquee"
                        android:focusable="auto"
                        android:focusableInTouchMode="true"
                        android:singleLine="true"
                        android:text="@string/tv_kind"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/title_copyright"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/mark_copyright"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>